Fix WebJava startup